loki/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-endpoint
  namespace: loki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.akstest.tech
    secretName: tls-secret
  rules:
  - host: prometheus.akstest.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loki-prometheus-server
            port:
              number: 80
